@@ -10197,8 +10197,8 @@ static AccessorTable CombosTable[] =
 	{ "setUserFlags",             ZVARTYPEID_VOID,          SETTER,       COMBODUSRFLAGS,               1,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getFlags[]",               ZVARTYPEID_BOOL,          GETTER,       COMBODUSRFLAGARR,            16,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "setFlags[]",               ZVARTYPEID_VOID,          SETTER,       COMBODUSRFLAGARR,            16,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
-	{ "getGenFlags[]",            ZVARTYPEID_BOOL,          GETTER,       COMBODGENFLAGARR,             1,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
-	{ "setGenFlags[]",            ZVARTYPEID_VOID,          SETTER,       COMBODGENFLAGARR,             1,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "getGenFlags[]",            ZVARTYPEID_BOOL,          GETTER,       COMBODGENFLAGARR,             2,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
+	{ "setGenFlags[]",            ZVARTYPEID_VOID,          SETTER,       COMBODGENFLAGARR,             2,             0,                                    3,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, ZVARTYPEID_BOOL, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "getTriggerLevel",          ZVARTYPEID_FLOAT,         GETTER,       COMBODTRIGGERLEVEL,           1,             0,                                    1,           { ZVARTYPEID_COMBOS, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 	{ "setTriggerLevel",          ZVARTYPEID_VOID,          SETTER,       COMBODTRIGGERLEVEL,           1,             0,                                    2,           { ZVARTYPEID_COMBOS, ZVARTYPEID_FLOAT, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1 } },
 //	comboclass struct
